--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Develop Node.js http server to store, retrieve and delete information about images using HTTP GET, POST and DELETE requests and JSON data format.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Dicksen Veloopillay",
   "license": "ISC"
