--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "start": "node index.js"
   },
   "author": "Dicksen Veloopillay",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "restify": "4.1.1",
+		"save": "2.3.0"  }
+
 }
